Fixed loading icons from codebase in browser, account-cfgs added to deploy

--- a/examples/account/account-sui/pom.xml
+++ b/examples/account/account-sui/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
 	<artifactId>account-sui</artifactId>
-	<name>SORCER :: account :: service UI</name>
+	<name>SORCER :: examples :: account :: service UI</name>
 
 	<dependencies>
 		<dependency>
