--- a/examples/ex6/ex6-cfg-adder/src/main/resources/adder-prv.config
+++ b/examples/ex6/ex6-cfg-adder/src/main/resources/adder-prv.config
@@ -49,7 +49,9 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.arithmetic.provider.AdderImpl.class }; 
 		
-		iconName="sorcer.jpg";
+		//iconName="sorcer.jpg";
+		//iconName="sorcer-iconnn.png";
+		iconName="examples.png";
 }
 	
 
