--- a/examples/account/account-cfg-1/pom.xml
+++ b/examples/account/account-cfg-1/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
     <artifactId>account-cfg-1</artifactId>
-    <name>SORCER :: account :: config 1</name>
+    <name>SORCER :: examples :: account :: config 1</name>
 
     <dependencies>
         <dependency>
