--- a/examples/account/account-req/pom.xml
+++ b/examples/account/account-req/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
 	<artifactId>account-req</artifactId>
-	<name>SORCER :: account :: requestor</name>
+	<name>SORCER :: examples :: account :: requestor</name>
 
 	<dependencies>
 		<dependency>
