--- a/sos-providers/other-configs/blitz-cfg/pom.xml
+++ b/sos-providers/other-configs/blitz-cfg/pom.xml
@@ -57,5 +57,23 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.config</include>
+                    <include>**/*.groovy</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/*.config</exclude>
+                    <exclude>**/*.groovy</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 </project>
