Added SorcerResolvingLoader that supports multiple artifacts in codebase

--- a/examples/account/account-cfg-2/pom.xml
+++ b/examples/account/account-cfg-2/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
     <artifactId>account-cfg-2</artifactId>
-    <name>SORCER :: examples :: account :: config 2</name>
+    <name>SORCER examples :: account :: config 2</name>
 
     <dependencies>
         <dependency>
