--- a/examples/account/account-api/pom.xml
+++ b/examples/account/account-api/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
 	<artifactId>account-api</artifactId>
-	<name>SORCER :: examples :: account :: API</name>
+	<name>SORCER examples :: account :: API</name>
 
 	<dependencies>
 		<dependency>
