Fixes in configs after adding SorcerResolvingLoader, fixes in test-examples but still problems with arithmetic-ter

--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -10,11 +10,11 @@ sorcer.local.repo.location = ${user.home}/.m2/repository
 # use provider names suffixed with the OS user name
 sorcer.provider.name.suffixed = true
 # custom suffix for provider names
-sorcer.provider.name.suffix = TT
+sorcer.provider.name.suffix = DEV
 
 # Groups to register/lookup
-provider.groups=sorcer.DEF-TT
-provider.space.group=sorcer.DEF-TT
+provider.groups=sorcer.TEST-DEV
+provider.space.group=sorcer.TEST-DEV
 provider.space.name=Blitz Space
 #provider.worker.transactional=true
 worker.transactional.lease.time=50000
