--- a/examples/ex0/ex0-cfg/src/main/resources/service.config
+++ b/examples/ex0/ex0-cfg/src/main/resources/service.config
@@ -13,7 +13,6 @@ import net.jini.lookup.ui.MainUI;
 import sorcer.ui.serviceui.UIComponentFactory;
 import sorcer.ui.serviceui.UIDescriptorFactory;
 import java.net.URL;
-//import sorcer.ex0.HelloWorldImplUI;
 
 sorcer.core.provider.ServiceProvider {
 	/* service provider generic properties */
@@ -22,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 	publishedInterfaces = new Class[] { sorcer.ex0.HelloWorld.class };
 	// service beans
 	beanClasses = new Class[] { sorcer.ex0.HelloWorldImpl.class };
-	iconName="/config/sorcer.png";
+    iconName = "config/sorcer.png";
 
 	entries = new Entry[] {
 	    UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(new URL("artifact:org.sorcersoft.sorcer:ex0-sui:" + sorcer.core.SorcerConstants.SORCER_VERSION), "sorcer.ex0.HelloWorldImplUI"))
