Many fixes - concatenator exporter, fixes in codebase in int-tests to enable running int-tests with a remote sorcer, fixes in windows scripts

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -46,4 +46,15 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <profiles>
+        <profile>
+            <id>run-its</id>
+            <properties>
+                <run-its>true</run-its>
+                <surefire.excludedGroups/>
+                <surefire.includedGroups>sorcer.junit.SorcerClient</surefire.includedGroups>
+            </properties>
+        </profile>
+    </profiles>
 </project>
