--- a/configs/shell/configs/nsh-init.config
+++ b/configs/shell/configs/nsh-init.config
@@ -38,7 +38,7 @@ sorcer.tools.shell.NetworkShell {
 	
 	// application name/startupFile pairs for non-interactive shells, e.g., nsh --browser
 	applications = new String[] { 
-		"browser",  home + "bin/sorcer-browser.xml"
+		"browser",  home + "/bin/sorcer-browser.xml"
 	};
 
 }
