--- a/sos-providers/concatenator/concatenator-cfg/src/main/resources/concatenator.config
+++ b/sos-providers/concatenator/concatenator-cfg/src/main/resources/concatenator.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
 	location="MSTC/AFRL/WPAFB";
 
     // if not declared the default exporter is BasicJeriExporter
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 
     //Exertion Space (JavaSpaces configuration)
     spaceEnabled = false;
