Workaround for problems with reggie discovery in shell in the open source version

--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -31,23 +31,29 @@
 ## codebase http:// - specifies remote jar file using a direct URL
 ##
 # Needed to interpret netlet scripts
+load artifact:org.sorcersoft.sorcer/commons-req/1.0-M4-SNAPSHOT
 load mvn://org.sorcersoft.sorcer:sos-api
-load mvn://org.sorcersoft.sorcer:dbp-api
-load mvn://org.sorcersoft.sorcer:commons-req
-load mvn://net.jini:jsk-lib
-load mvn://net.jini:jsk-platform
-load mvn://org.sorcersoft.sorcer:sorcer-api
-load mvn://org.sorcersoft.sorcer:sorcer-resolver
 load mvn://org.sorcersoft.sorcer:sos-netlet
 load mvn://org.sorcersoft.sorcer:sos-shell
-load mvn://org.sorcersoft.sorcer:sos-platform
-load mvn://org.sorcersoft.sorcer:sos-webster
-load mvn://org.rioproject:rio-platform
-load mvn://org.rioproject.resolver:resolver-api
-load mvn://org.codehaus.groovy:groovy-all
-load mvn://org.codehaus.plexus:plexus-utils
+load mvn://org.rioproject:rio-api
 load mvn://commons-io.commons-io:commons:2.4
-load mvn://net.jini.lookup:serviceui
+load mvn://org.rioproject:rio-platform
+load mvn://net.jini:jsk-platform
+
+#load mvn://org.rioproject.resolver:resolver-api
+#load mvn://org.sorcersoft.sorcer:sorcer-resolver
+#load mvn://net.jini.lookup:serviceui
+#load mvn://org.sorcersoft.sorcer:sos-platform
+#load mvn://org.sorcersoft.sorcer:sos-webster
+#load mvn://org.sorcersoft.sorcer:sorcer-api
+#load mvn://org.sorcersoft.sorcer:dbp-api
+#load mvn://net.jini:jsk-dl
+#load mvn://net.jini:jsk-lib
+#load mvn://org.sorcersoft.sorcer:sos-util
+#load mvn://org.rioproject.resolver:resolver-api
+#load mvn://org.codehaus.groovy:groovy-all
+#load mvn://org.sorcersoft.sorcer:sorcer-resolver
+#load mvn://org.codehaus.plexus:plexus-utils
 
     # tools.jar for ant tasks
     # load file://${tools.jar}
