Fixes allowing ant-compat builds and running of this old code

--- a/configs/startup-boot-prv.config
+++ b/configs/startup-boot-prv.config
@@ -26,7 +26,14 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-        SorcerDescriptorUtil.getWebster(policy, port, Booter.getWebsterRoots()),
+        new SorcerServiceDescriptor(null,
+           			policy,
+        			Booter.resolveClasspath("org.sorcersoft.sorcer:sos-webster"),
+        			"sorcer.tools.webster.Webster",
+        			"${sorcer.home}/bin/webster/configs/webster-prv.config"
+        ),
+
+        //SorcerDescriptorUtil.getWebster(policy, port, Booter.getWebsterRoots()),
     
 		/* Provider descriptor */
 		//String codebase, String policy, String classpath, String implClassName, String... serverConfigArgs)
