--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -13,6 +13,9 @@ sorcer.tools.codeserver {
     sorcerLibPath 	 = home + "${/}lib${/}sorcer";
     jiniLibPath 	 = home + "${/}lib${/}jini";
     rioLibPath 	     = home + "${/}lib${/}rio";
+    rioResLibPath 	 = home + "${/}lib${/}rio-resolver";
+    rioCybLibPath 	 = home + "${/}lib${/}rio-cybernode";
+    rioMonLibPath 	 = home + "${/}lib${/}rio-monitor";
     riverLibPath 	 = home + "${/}lib${/}river";
     commonsLibPath 	 = home + "${/}lib${/}commons";
     jiniLookupLibPath= home + "${/}lib${/}jini-lookup";
@@ -30,6 +33,10 @@ sorcer.tools.codeserver {
     roots = Booter.getWebsterRoots(new String[] {
 		sorcerLibPath,
 		jiniLibPath,
+		rioLibPath,
+		rioResLibPath,
+		rioCybLibPath,
+		rioMonLibPath,
 		jiniLookupLibPath,
 		riverLibPath,
 		commonsLibPath
