--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -69,6 +69,12 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0-beta4</version>
+            <classifier>no_aop</classifier>
+        </dependency>
 
         <!--ServiceStarter-->
 		<dependency>
