Refactor service creation (service descriptor classes); Add ResolvingServiceDescriptor for platform services; PlatformLoader.loadPlatformServices sorts files by the path; move service count and basic beans (ProtocolHandlerRegistry, Policy, JarClassPathHelper) initialization to ServiceStarter; migrate Bdb/Handler opstring to platform service;

--- a/sorcer-rio/sorcer-rio-resolver/pom.xml
+++ b/sorcer-rio/sorcer-rio-resolver/pom.xml
@@ -37,11 +37,13 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-boot</artifactId>
             <version>${v.sorcer}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
