--- a/sos-providers/dbp/dbp-handler/pom.xml
+++ b/sos-providers/dbp/dbp-handler/pom.xml
@@ -49,7 +49,11 @@
             <artifactId>sos-util</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 
 
