extract module sorcer-ui with basic UI classes; add URL GenericUtil.toArtifactUrl(URL codebaseRoot, String artifact); extract common UIDescriptor entries creation to platform service; add support for creating guice modules from platform activator; refactor ServiceDescriptors; remove Installer call from SorcerLauncher

--- a/sos-providers/cataloger/cataloger-cfg/pom.xml
+++ b/sos-providers/cataloger/cataloger-cfg/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>cataloger-prv</artifactId>
         	<version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sorcer-ui</artifactId>
+        	<version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
