--- a/tools/browser/pom.xml
+++ b/tools/browser/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
          <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-ui</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
             <version>${project.version}</version>
          </dependency>
