--- a/examples/ex6/ex6-sui/pom.xml
+++ b/examples/ex6/ex6-sui/pom.xml
@@ -32,5 +32,10 @@
             <artifactId>serviceui</artifactId>
             <version>${v.jini}</version>
         </dependency>
+        <dependency>
+           <groupId>org.sorcersoft.sorcer</groupId>
+           <artifactId>sorcer-ui</artifactId>
+           <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
