--- a/sos-providers/logger/logger-sui/pom.xml
+++ b/sos-providers/logger/logger-sui/pom.xml
@@ -24,6 +24,11 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         </dependency>
+        <dependency>
+           <groupId>org.sorcersoft.sorcer</groupId>
+           <artifactId>sorcer-ui</artifactId>
+           <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
