--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -39,11 +39,6 @@
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-resolver</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
         </dependency>
@@ -67,7 +62,7 @@
             <artifactId>monitor-api</artifactId>
             <version>${v.rio}</version>
         </dependency>
-        <!-- Added for ExertionSorter tests -->
+        <!-- Added for ExertionSorter -->
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-utils</artifactId>
@@ -79,6 +74,17 @@
 			<artifactId>groovy-all</artifactId>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0-beta4</version>
+            <classifier>no_aop</classifier>
+        </dependency>
 		<dependency>
 			<groupId>javax.xml</groupId>
 			<artifactId>jaxrpc-api</artifactId>
@@ -100,4 +106,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Sorcer-Activation-Module>sorcer.core.PlatformModule</Sorcer-Activation-Module>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
