--- a/examples/ex0/ex0-cfg/pom.xml
+++ b/examples/ex0/ex0-cfg/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex0-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
