--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-cfg/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-cfg/pom.xml
@@ -14,16 +14,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.rioproject</groupId>
-            <artifactId>rio-platform</artifactId>
-            <version>${v.rio}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
-            <version>${v.sorcer}</version>
-            <scope>provided</scope>
+            <artifactId>sorcer-ui</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
