--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -569,7 +569,11 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>4.0-beta4</version>
-            <classifier>no_aop</classifier>
+        </dependency>
+        <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
