Move ExertletUiModule to own module

--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -17,10 +17,10 @@
         <module>sorcer-ui</module>
         <module>sos-platform</module>
         <module>sos-util</module>
-        <module>sos-exertlet-sui</module>
         <module>sos-launch</module>
         <module>commons-req</module>
         <module>commons-prv</module>
         <module>sos-api</module>
+        <module>exertlet</module>
     </modules>
 </project>
