--- a/examples/ex6/ex6-cfg-all/pom.xml
+++ b/examples/ex6/ex6-cfg-all/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>ex6-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex6-dl</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
