Fixed problems with pipes when job contains one task and is inside another job, fixed extraction of files from context in shell

--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -36,7 +36,7 @@ load mvn://org.sorcersoft.sorcer:sos-api
 load mvn://org.sorcersoft.sorcer:sos-netlet
 load mvn://org.sorcersoft.sorcer:sos-shell
 load mvn://org.rioproject:rio-api
-load mvn://commons-io.commons-io:commons:2.4
+load mvn://commons-io:commons-io:2.4
 load mvn://org.rioproject:rio-platform
 load mvn://net.jini:jsk-platform
 
