--- a/examples/ex0/ex0-cfg/pom.xml
+++ b/examples/ex0/ex0-cfg/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>ex0-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex0-dl</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
