--- a/sos-providers/dbp/pom.xml
+++ b/sos-providers/dbp/pom.xml
@@ -16,5 +16,6 @@
         <module>dbp-prv</module>
         <module>dbp-cfg</module>
         <module>dbp-handler</module>
+        <module>dbp-dl</module>
     </modules>
 </project>
