--- a/sos-providers/exerter/exerter-cfg/pom.xml
+++ b/sos-providers/exerter/exerter-cfg/pom.xml
@@ -12,11 +12,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>exerter-prv</artifactId>
-        	<version>${project.version}</version>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
