--- a/sos/sorcer-ui/pom.xml
+++ b/sos/sorcer-ui/pom.xml
@@ -26,6 +26,7 @@
     </parent>
 
     <artifactId>sorcer-ui</artifactId>
+    <name>SORCER OS :: UI</name>
 
     <dependencies>
         <dependency>
