update poms, fix dependencies

--- a/examples/ex2/ex2-dl/pom.xml
+++ b/examples/ex2/ex2-dl/pom.xml
@@ -32,7 +32,7 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex2-rdl</artifactId>
+            <artifactId>ex2-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
