--- a/examples/ex0/ex0-prv/pom.xml
+++ b/examples/ex0/ex0-prv/pom.xml
@@ -22,7 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sos-platform</artifactId>
+			<artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
 		</dependency>
 
