--- a/examples/ex5/ex5-prv/pom.xml
+++ b/examples/ex5/ex5-prv/pom.xml
@@ -24,9 +24,8 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
+            <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
