Fixed ex5 exertleter (job)

--- a/examples/ex5/ex5-job/pom.xml
+++ b/examples/ex5/ex5-job/pom.xml
@@ -31,7 +31,7 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
+            <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
