Added custom icons to examples

--- a/examples/account/account-cfg-1/src/main/resources/account.config
+++ b/examples/account/account-cfg-1/src/main/resources/account.config
@@ -21,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 	name = "Account1";
 	description = "Account Service 1";
 	publishedInterfaces = new Class[] { sorcer.account.provider.Account.class, sorcer.account.provider.ServiceAccount.class };
-	iconName="/config/sorcer.png";
+	iconName="dollar.jpg";
 
 	entries = new Entry[] {
 	        UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(new URL("artifact:org.sorcersoft.sorcer:account-sui:" + SorcerConstants.SORCER_VERSION),
