--- a/examples/account/account-cfg-2/src/main/resources/account.config
+++ b/examples/account/account-cfg-2/src/main/resources/account.config
@@ -21,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 	name = "Account2";
 	description = "Account Service 2";
 	publishedInterfaces = new Class[] { sorcer.account.provider.Account.class, sorcer.account.provider.ServiceAccount.class };
-	iconName="/config/sorcer.png";
+    iconName="dollar.jpg";
 
 	entries = new Entry[] {
 	        UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(
