--- a/examples/ex0/ex0-cfg/src/main/resources/service.config
+++ b/examples/ex0/ex0-cfg/src/main/resources/service.config
@@ -21,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 	publishedInterfaces = new Class[] { sorcer.ex0.HelloWorld.class };
 	// service beans
 	beanClasses = new Class[] { sorcer.ex0.HelloWorldImpl.class };
-    iconName = "config/sorcer.png";
+    iconName = "hello.png";
 
 	entries = new Entry[] {
 	    UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(new URL("artifact:org.sorcersoft.sorcer:ex0-sui:" + sorcer.core.SorcerConstants.SORCER_VERSION), "sorcer.ex0.HelloWorldImplUI"))
