--- a/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt1-prv.config
+++ b/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt1-prv.config
@@ -36,5 +36,5 @@ sorcer.core.provider.ServiceProvider {
 		
         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
-        iconName="sorcer-ico-bw.png";
+        iconName="worker.jpg";
 }
