--- a/examples/ex5/ex5-cfg-adder/src/main/resources/adder-prv.config
+++ b/examples/ex5/ex5-cfg-adder/src/main/resources/adder-prv.config
@@ -49,7 +49,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.ex5.provider.AdderImpl.class };
 
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
