--- a/examples/ex5/ex5-cfg-subtractor/src/main/resources/subtractor-prv.config
+++ b/examples/ex5/ex5-cfg-subtractor/src/main/resources/subtractor-prv.config
@@ -33,7 +33,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.ex5.provider.SubtractorImpl.class };
 		
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
