--- a/examples/ex6/ex6-cfg-divider/src/main/resources/divider-prv.config
+++ b/examples/ex6/ex6-cfg-divider/src/main/resources/divider-prv.config
@@ -32,7 +32,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.arithmetic.provider.DividerImpl.class }; 
 		
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
