--- a/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt2-prv.config
+++ b/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt2-prv.config
@@ -35,7 +35,7 @@ sorcer.core.provider.ServiceProvider {
 			
         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
-        iconName="sorcer-ico-bw.png";
+        iconName="worker.jpg";
 }
 	
 
