--- a/examples/ex2/ex2-cfg3/src/main/resources/worker3-prv.config
+++ b/examples/ex2/ex2-cfg3/src/main/resources/worker3-prv.config
@@ -24,6 +24,7 @@ sorcer.core.provider.ServiceProvider {
         
         //application specific properties
         properties="worker-prv.properties";
+        iconName="worker.png";
 }
 	
 
