--- a/examples/ex5/ex5-cfg-all/src/main/resources/arithmetic-all-beans.config
+++ b/examples/ex5/ex5-cfg-all/src/main/resources/arithmetic-all-beans.config
@@ -66,7 +66,7 @@ sorcer.core.provider.ServiceProvider {
 		loadFactor = 3.0f;
 		waitForResultIncrement = 0;
 
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
