--- a/examples/ex5/ex5-cfg-divider/src/main/resources/divider-prv.config
+++ b/examples/ex5/ex5-cfg-divider/src/main/resources/divider-prv.config
@@ -32,7 +32,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.ex5.provider.DividerImpl.class };
 		
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
