--- a/examples/ex5/ex5-cfg-one-bean/src/main/resources/arithmetic-bean.config
+++ b/examples/ex5/ex5-cfg-one-bean/src/main/resources/arithmetic-bean.config
@@ -45,8 +45,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.ex5.provider.ArithmeticImpl.class };
 		
-		iconName="sorcer.jpg";
-
+		iconName="examples.png";
 
 }
 	
