--- a/examples/ex5/ex5-job/src/main/resources/arithmetic-ter.config
+++ b/examples/ex5/ex5-job/src/main/resources/arithmetic-ter.config
@@ -22,7 +22,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beans = new Object[] { NetArithmeticReq.createArithmeticJob() };
 		
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
