--- a/examples/ex6/ex6-cfg-multiplier/src/main/resources/multiplier-prv.config
+++ b/examples/ex6/ex6-cfg-multiplier/src/main/resources/multiplier-prv.config
@@ -33,7 +33,7 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.arithmetic.provider.MultiplierImpl.class }; 
 		
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
 	
 
