--- a/examples/ex6/ex6-cfg-one-bean/src/main/resources/arithmetic-bean.config
+++ b/examples/ex6/ex6-cfg-one-bean/src/main/resources/arithmetic-bean.config
@@ -62,5 +62,5 @@ sorcer.core.provider.ServiceProvider {
 		// service beans	
 		beanClasses = new Class[] { sorcer.arithmetic.provider.ArithmeticImpl.class };
 		
-		iconName="sorcer.jpg";
+		iconName="examples.png";
 }
