fix cataloger and logger ui configurations; remove unused classes; add version resolving to InternalWebster

--- a/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
+++ b/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
@@ -5,8 +5,9 @@ import net.jini.jeri.tcp.*;
 import net.jini.core.entry.*;
 import net.jini.lookup.entry.*;
 import sorcer.core.*;
+import sorcer.provider.boot.Booter;
 import sorcer.util.Artifact;
-import sorcer.resolver.Resolver;
+import sorcer.util.ArtifactCoordinates;
 import sorcer.ui.serviceui.*;
 
 sorcer.core.provider.ServiceProvider  {
@@ -15,17 +16,21 @@ sorcer.core.provider.ServiceProvider  {
 		description = "Dynamic catalog of SORCER service providers";
 		location = "Sorcersoft.com Lab";
 		spaceEnabled = false;
-		uiUrl = Resolver.resolveAbsoluteURL(new URL(SorcerEnv.getWebsterUrl()), Artifact.sorcer("cataloger-sui"));
-		helpUrl = new URL(SorcerEnv.getWebsterUrl() + "/deploy/cataloger.html");
+
 		entries = new Entry[] {
 			// URL exportUrl, String className, String name, String helpFilename
 			UIDescriptorFactory.getUIDescriptor(
 				net.jini.lookup.ui.MainUI.ROLE,
 				new UIFrameFactory(
-					new URL[]{uiUrl},
+					new URL[]{
+						Booter.artifactURL(Artifact.sorcer("cataloger-sui")),
+						Booter.artifactURL(Artifact.sorcer("sorcer-ui")),
+						Booter.artifactURL(Artifact.sorcer("sos-exertlet-sui")),
+						Booter.artifactURL(ArtifactCoordinates.coords("net.jini.lookup:serviceui"))
+					},
 					"sorcer.core.provider.cataloger.ui.CatalogerUI",
 					"Catalog Browser",
-					helpUrl
+					new URL(SorcerEnv.getWebsterUrl() + "/deploy/cataloger.html")
 				)
 			),
 			new Comment("Welcome to exertion-oriented programming!"),
