--- a/tools/sos-webster/pom.xml
+++ b/tools/sos-webster/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>sorcer-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+       	<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-resolver</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
